[metadata]
authors =
	Adrian Cederberg
name = sqlalchemy-dummy-data
version = 0.0.0
description = A tool for populating SQL databases from sqlalchemy models.
long_description = file: README.rst
liscense = No
keywords = sqlalchemy, sql, dummy-data, faker, test


[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
